jorge keeps code and works more on h edits

--- a/abc_comprehensivecba_2016-08-21b_jlg.tex
+++ b/abc_comprehensivecba_2016-08-21b_jlg.tex
@@ -2,9 +2,7 @@
 \input{preamble}
 \input{output/mainstatistics}
 
-\externaldocument{abc_comprehensivecba_appendix_2016-08-19a_jbb}
-\externaldocument{abc_comprehensivecba_appendix_2016-07-31a_jlg}
-
+\externaldocument{abc_comprehensivecba_appendix_AA1_2016-08-19a_jbb.tex}
 \pagenumbering{roman}
 
 \begin{document}
@@ -38,7 +36,7 @@ The University of Chicago}
 \singlespacing
 
 \begin{abstract}
-This paper estimates the diverse array of life cycle benefits of an influential early childhood program targeted to disadvantaged children and their families. The program is a prototype for numerous current interventions around the world. It has substantial beneficial long-term effects on (a) health and the quality of life, (b) the earnings of participants, (c) the earnings and education of their mothers through subsidizing childcare, (d) crime, and (e) education. There are pronounced benefits for both genders, with more substantial monetized benefits for boys. The overall rate of return is a statistically significant 13\% per annum with a benefit/cost ratio of 5.7, even after accounting for the welfare costs of taxation to finance the intervention. Estimates are robust to a variety of sensitivity analyses.
+This paper estimates the diverse array of life cycle benefits of an influential early childhood program targeted to disadvantaged children and their families. The program is a prototype for numerous current interventions around the world. It has substantial beneficial long-term effects on (a) health and the quality of life, (b) the earnings of participants, (c) the earnings and education of their mothers through subsidizing childcare, (d) crime, and (e) education. There are pronounced benefits for both genders, with more substantial monetized benefits for boys. The overall rate of return is a statistically significant 13\% per annum with a benefit/cost ratio of 5.6, even after accounting for the welfare costs of taxation to finance the intervention. Estimates are robust to a variety of sensitivity analyses.
 \end{abstract}
 
 \noindent \textbf{Keywords}: Health, childcare, crime, randomized trials, early childhood education, gender differences in responses to interventions \\
@@ -125,9 +123,9 @@ This paper estimates the diverse array of life cycle benefits of an influential 
 
 \section{Introduction}
 
-This paper estimates the diverse array of life cycle benefits of an intensive and influential early childhood program that starts in the first weeks of life and targets disadvantaged children. Different approaches designed to characterize the numerous benefits of the program all agree that the program has a substantial impact on the life outcomes of participants. Monetizing benefits and costs across multiple domains in a benefit-cost analysis produces a single policy-relevant and economically interpretable summary of the program. It has a rate of return of 13\% per annum and a cost/benefit ratio of 5.7. 
+This paper estimates the diverse array of life cycle benefits of an intensive and influential early childhood program that starts in the first weeks of life and targets disadvantaged children. Different approaches designed to characterize the numerous benefits of the program all agree that the program has a substantial impact on the life outcomes of participants. Monetizing benefits and costs across multiple domains in a benefit-cost analysis produces a single policy-relevant and economically interpretable summary of the program. It has a rate of return of 13\% per annum and a cost/benefit ratio of 5.6. 
 
-Our analysis contributes to a growing literature on the benefits of early interventions for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term evidence on their effectiveness is surprisingly limited.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_RateofReturn,Heckman_Moon_etal_2010_QE}), the ABC/CARE programs (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and IHDP (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}) \textbf{[Typist: Professor, I could not find her on the list of lecturers for the Richard T. Ely lecture---I have removed the ``chapter 1'' part of the reference]}. IHDP was inspired by ABC.} For want of long-term followup data, many studies of early childhood interventions report outcomes at early ages using a limited set of outcomes like IQ or scores on school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2014_EvaluatingPublicPrograms} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} Yet it is the long-term costs and benefits that are relevant to policy analysis.
+Our analysis contributes to a growing literature on the benefits of early interventions for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term evidence on their effectiveness is surprisingly limited.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_RateofReturn,Heckman_Moon_etal_2010_QE}), the ABC/CARE programs (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and IHDP (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}) \textbf{[Typist: Professor, I could not find her on the list of lecturers for the Richard T. Ely lecture---I have removed the ``chapter 1'' part of the reference]}. IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of long-term followup data, many studies of early childhood interventions report outcomes at early ages using a limited set of outcomes like IQ or scores on school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2014_EvaluatingPublicPrograms} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} Yet it is the long-term costs and benefits that are relevant to policy analysis.
 
 This paper analyzes a diverse array of \emph{long-term} benefits from two virtually identical early childhood interventions implemented in sequential order in North Carolina. Both are evaluated by the method of random assignment. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE), henceforth ABC/CARE. These programs were launched in the early 1970s and have long-term follow-ups through age 34. We analyze their impacts on a variety of life-relevant outcomes such as health, the quality of life, participation in crime, earnings, IQ, schooling, and the subsidy of the mother's employment through subsidizing childcare costs of mothers.
 
@@ -137,13 +135,30 @@ Summarizing the benefits of a program with a diverse array of outcomes across ma
 
 A fundamental problem facing the evaluation of any human capital program is assessing future benefits of the program not yet surveyed.\footnote{\cite{Mincer_Polachek_1974_JPE} address this problem using a sympathetic cohort approach. See \cite{Heckman_Lochner_etal_2008_JHC}.} We address this problem by combining information from multiple panel data sources on our numerous outcomes to project benefits and costs over the lifetimes of participants.\footnote{See, e.g., \citealp{Ridder_Moffitt_2007_hbk_metricsdata} for a valuable discussion of data pooling methods.} We account for sampling uncertainty in pooling data and conduct sensitivity analyses for components where sampling uncertainty is not readily quantified. Our approach to pooling multiple data sets and analyzing blocks of outcomes is of interest in their own right as a template for evaluating other programs with numerous outcomes, although this is not primarily a paper on methodology.
 
-An important contribution of this paper is our analysis of the long-run benefits of the intervention. We estimate the savings in life cycle medical costs and improvements on the quality of life.\footnote{\cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} show the substantial adult (age 34) health benefits of ABC but do not present a cost/benefit analysis of their results.} We also find substantial childcare benefits that promote the work of mothers of participating children. There are substantial adult (age 34) benefits in terms of reduced crime, gains in life cycle earnings, and educational attainment.\footnote{The rate of return is a statistically significant 13\% with an associated benefit/cost ratio of 5.7.} \textbf{[JJH: Jorge, what do we have on special education, etc?] [JLG: we do have special education and grade repetition and it is part of the benefits of the program. There is a reduction. We are quantifying it. It's part of the benefits we quantify as part of education (most of education is costs because people in treatment got more to school. Special education and grade repetition are a benefit.) We do not have it as a separate item because it is small.]}
+An important contribution of this paper is our analysis of the long-run benefits of the intervention. We estimate the savings in life cycle medical costs and improvements on the quality of life.\footnote{\cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} show the substantial adult (age 34) health benefits of ABC but do not present a cost/benefit analysis of their results.} We also find substantial childcare benefits that promote the work of mothers of participating children. There are substantial adult (age 34) benefits in terms of reduced crime, gains in life cycle earnings, and educational attainment.\footnote{The rate of return is a statistically significant 13\% with an associated benefit/cost ratio of 5.6.} \textbf{[JJH: Jorge, what do we have on special education, etc?] [JLG: we do have special education and grade repetition and it is part of the benefits of the program. There is a reduction. We are quantifying it. It's part of the benefits we quantify as part of education (most of education is costs because people in treatment got more to school. Special education and grade repetition are a benefit.) We do not have it as a separate item because it is small.]}
 
 Figure 1 summarizes the main findings of the paper. It displays the program costs and benefits for a pooled sample of participants: Costs are substantial, as has frequently been noted in public policy discussions.\footnote{\cite{Whitehurst_2014_Senate_Testimony}.} But so are benefits. Breaking down the benefits by category we find substantial benefits for the labor income of participants and their mothers, reduced medical costs, enhanced quality of life, and reduced crime.
 
+\begin{sidewaysfigure}[H]
+\caption{Life-cycle Net Present Value of Main Components of the CBA, Pooled Sample of Males and Females}
+\label{figure:npvs}
+\centering
+\includegraphics[width=.8\columnwidth]{output/abccare_npvssumm.eps}
+\floatfoot{
+\footnotesize
+Note: This figure displays the life-cycle net present values of the main components of the cost-benefit analysis of ABC/CARE.  By ``net” we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs refers to the total cost of implementing ABC/CARE. Total net benefits represents the total net benefits of \textit{all} the components we consider. Labor income represents total individual labor income from ages 20 to the retirement of program participants. Parental income represents total parental labor income of the parents of the program participants from when the participants were ages 0 to 15. Crime is the total cost of crime (judiciary plus victimization). QALYs refers to the quality-adjusted life years gain due to better health conditions through age 79. Total medical costs accounts for both private and public medical costs from ages 15 to 79. Costs of education represent the total costs of education of the individual from ages 6 to 26 and \textit{include any costs from special education and grade retention.}
+}
+\end{sidewaysfigure}
+
 \textbf{[JJH: Jorge, please make a coherent figure for the program overall. What are control substitutions and benefits? Where is reduced special education? At base of table please place definition of each item. What is ``control substitution''? Please be clear. Edit down --- figure too busy. Just present the overall numbers (stay at home and alt preschool)] [Typist: Jorge is working on this paper]}
 
-The rest of the paper justifies this figure and interprets it. We build up to it in the following way. Section~\ref{section:background} discusses main features of ABC/CARE. Many details are relegated to a Web Appendix. Section~\ref{section:methodology} discusses the methodological challenges faced in evaluating the program. There are many outcomes measured across multiple stages of the life cycle and across many domains. To address this issue, we use three main methodologies: (a) step down multiple hypothesis testing procedures following \cite{Romano_Wolf_2005_JASA}, reporting blocks of outcomes and adjusting $p$-values for the multiplicity of reported outcomes to avoid cherry-picking of ``significant'' results (see, e.g., \citealp{Heckman_Moon_etal_2010_QE}); (b) combining functions that summarize the \emph{number} of beneficial outcomes (as well as the number of statistically significant beneficial outcomes) within blocks of outcomes and overall. This gives a convenient summary of the mass of evidence in favor of program effects. Our principal too is (c), cost/benefit analysis, which monetizes the costs and benefits associated with outcomes. We also disaggregate benefits by categories as depicted in Figure 1. A second methodological challenge is control group substitution bias.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline-Walters_2016_QJE}.} Roughly 60\% of our experimental control groups take some form of alternative preschool at least some of the time. We define and estimate counterfactuals corresponding to (i) treatment versus the next best, (ii) treatment versus stay at home, and (iii) treatment versus alternative preschool. Doing so highlights importance of the program compared to each alternative. Section~\ref{section:results} reports and discusses the estimates of treatment effects, combining function and benefit/cost ration. Estimates from the three methodologies agree. There are substantial benefits that differ by gender. Women benefit across more domains measured in terms of treatment effects. The monetized value of the treatment effects is greater for men. This is largely driven by the health benefits and reduction in crime for boys. Section~\ref{section:conclusion} concludes.
+The rest of the paper justifies this figure and interprets it. We build up to it in the following way. Section~\ref{section:background} discusses main features of ABC/CARE. Many details are relegated to a Web Appendix. Section~\ref{section:methodology} discusses the methodological challenges faced in evaluating the program. There are many outcomes measured across multiple stages of the life cycle and across many domains. 
+
+To address this issue, we use three main methodologies: (a) step down multiple hypothesis testing procedures following \cite{Romano_Wolf_2005_JASA}, reporting blocks of outcomes and adjusting $p$-values for the multiplicity of reported outcomes to avoid cherry-picking of ``significant'' results (see, e.g., \citealp{Heckman_Moon_etal_2010_QE}); (b) combining functions that summarize the \emph{number} of beneficial outcomes (as well as the number of statistically significant beneficial outcomes) within blocks of outcomes and overall. This gives a convenient summary of the mass of evidence in favor of program effects. Our principal too is (c), cost/benefit analysis, which monetizes the costs and benefits associated with outcomes. We also disaggregate benefits by categories as depicted in Figure 1. 
+
+A second methodological challenge is control group substitution bias.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline-Walters_2016_QJE}.} Roughly 70\% of our experimental control groups take some form of alternative preschool at least some of the time. We define and estimate counterfactuals corresponding to (i) treatment versus the next best, (ii) treatment versus stay at home, and (iii) treatment versus alternative preschool. Doing so highlights importance of the program compared to each alternative. 
+
+Section~\ref{section:results} reports and discusses the estimates of treatment effects, combining function and benefit/cost ration. Estimates from the three methodologies agree. There are substantial benefits that differ by gender. Women benefit across more domains measured in terms of treatment effects. The monetized value of the treatment effects is greater for men. This is largely driven by the health benefits and reduction in crime for boys. Section~\ref{section:conclusion} concludes.
 
 \section[Background and Data Sources]{Background and Data Sources\footnote{This section of the paper is based on joint work with Sylvi Kuperman. We expand it  in Appendix~\ref{appendix:background} and Appendix~\ref{app:programcosts}.}} \label{section:background}
 
@@ -372,16 +387,16 @@ We present three main categories for health. As we more extensively report in th
 
 Before doing do, it is important to note that although the net present values from the three comparisons imply that ABC and CARE are socially beneficial, independently to control substitution, the magnitudes for some of the components do vary substantially. As we argue next, this has to do with the differences between females and males in the treatment effects that the program has. As Figure~\ref{figure:npvsf} and Figure~\ref{figure:npvsm} show, males benefit much more when the counterfactual scenario is to attend alternative preschools, while females benefit much more from the program when the counterfactual scenario is to stay at home.
 
-\textbf{[JJH: Redraft all of these figures] [Typist: Jorge is working on this]}
+\textbf{[JJH: Redraft all of these figures] [Typist: Jorge is working on this] [JLG: New figures below.]}
 
 \begin{sidewaysfigure}[H]
-\caption{Life-cycle Net Present Value of Main Components of the CBA, Males and Females}
+\caption{Life-cycle Net Present Value of Main Components of the CBA, Pooled Sample of Males and Females}
 \label{figure:npvs}
 \centering
-\includegraphics[width=.9\columnwidth]{output/abccare_npvs3.eps}
+\includegraphics[width=.8\columnwidth]{output/abccare_npvs3.eps}
 \floatfoot{
 \footnotesize
-Note: This figure displays the life-cycle net present value of the main components of the cost-benefit analysis of ABC and CARE. ``Baseline'': compares the treatment to the control group. ``Stay at Home'': compares the treatment group to those children who stay at home. ``Alternative Preschool'': compares the treatment group to those children who attend alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. Control substitution refers to the cost parents in the control group incur by sending their children to alternative preschool. QALYs refers to the quality-adjusted life years gain due to better health conditions later in life.
+Note: This figure displays the life-cycle net present value of the main components of the cost-benefit analysis of ABC and CARE. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those children who stay at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those children who attend alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net” we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs refers to the total cost of implementing ABC/CARE. Total net benefits represents the total net benefits of \textit{all} the components we consider. Labor income represents total individual labor income from ages 20 to the retirement of program participants. Parental income represents total parental labor income of the parents of the program participants from when the participants were ages 0 to 15. Crime is the total cost of crime (judiciary plus victimization). QALYs refers to the quality-adjusted life years gain due to better health conditions through age 79. Total medical costs accounts for both private and public medical costs from ages 15 to 79. Costs of education represent the total costs of education of the individual from ages 6 to 26 and \textit{include any costs from special education and grade retention.}
 }
 \end{sidewaysfigure}
 
@@ -389,10 +404,10 @@ Note: This figure displays the life-cycle net present value of the main componen
 \caption{Life-cycle Net Present Value of Main Components of the CBA, Females}
 \label{figure:npvsf}
 \centering
-\includegraphics[width=.9\columnwidth]{output/abccare_npvs1.eps}
+\includegraphics[width=.8\columnwidth]{output/abccare_npvs1.eps}
 \floatfoot{
 \footnotesize
-Note: This figure displays the life-cycle net present value of the main components of the cost-benefit analysis of ABC and CARE. ``Baseline'': compares the treatment to the control group. ``Stay at Home'': compares the treatment group to those children who stay at home. ``Alternative Preschool'': compares the treatment group to those children who attend alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. Control substitution refers to the cost parents in the control group incur by sending their children to alternative preschool. QALYs refers to the quality-adjusted life years gain due to better health conditions later in life.
+Note: This figure displays the life-cycle net present value of the main components of the cost-benefit analysis of ABC and CARE. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those children who stay at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those children who attend alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net” we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs refers to the total cost of implementing ABC/CARE. Total net benefits represents the total net benefits of \textit{all} the components we consider. Labor income represents total individual labor income from ages 20 to the retirement of program participants. Parental income represents total parental labor income of the parents of the program participants from when the participants were ages 0 to 15. Crime is the total cost of crime (judiciary plus victimization). QALYs refers to the quality-adjusted life years gain due to better health conditions through age 79. Total medical costs accounts for both private and public medical costs from ages 15 to 79. Costs of education represent the total costs of education of the individual from ages 6 to 26 and \textit{include any costs from special education and grade retention.}
 }
 \end{sidewaysfigure}
 
@@ -400,10 +415,10 @@ Note: This figure displays the life-cycle net present value of the main componen
 \caption{Life-cycle Net Present Value of Main Components of the CBA, Males}
 \label{figure:npvsm}
 \centering
-\includegraphics[width=.9\columnwidth]{output/abccare_npvs2.eps}
+\includegraphics[width=.8\columnwidth]{output/abccare_npvs2.eps}
 \floatfoot{
 \footnotesize
-Note: This figure displays the life-cycle net present value of the main components of the cost-benefit analysis of ABC and CARE. ``Baseline'': compares the treatment to the control group. ``Stay at Home'': compares the treatment group to those children who stay at home. ``Alternative Preschool'': compares the treatment group to those children who attend alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. Control substitution refers to the cost parents in the control group incur by sending their children to alternative preschool. QALYs refers to the quality-adjusted life years gain due to better health conditions later in life.
+Note: This figure displays the life-cycle net present value of the main components of the cost-benefit analysis of ABC and CARE. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those children who stay at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those children who attend alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net” we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs refers to the total cost of implementing ABC/CARE. Total net benefits represents the total net benefits of \textit{all} the components we consider. Labor income represents total individual labor income from ages 20 to the retirement of program participants. Parental income represents total parental labor income of the parents of the program participants from when the participants were ages 0 to 15. Crime is the total cost of crime (judiciary plus victimization). QALYs refers to the quality-adjusted life years gain due to better health conditions through age 79. Total medical costs accounts for both private and public medical costs from ages 15 to 79. Costs of education represent the total costs of education of the individual from ages 6 to 26 and \textit{include any costs from special education and grade retention.}
 }
 \end{sidewaysfigure}
 
@@ -488,7 +503,7 @@ The first level of each model predicts the likelihood that the subject incurred 
 
 \subsection{Cost-benefit Analysis} \label{section:cbaresults}
 
- able~\ref{table:cba} summarizes the cost-benefit analysis of the programs without accounting for control substitution. All the money figures are in 2014 USD and are discounted to each child's birth age, unless otherwise specified.
+Table~\ref{table:cba} summarizes the cost-benefit analysis of the programs without accounting for control substitution. All the money figures are in 2014 USD and are discounted to each child's birth age, unless otherwise specified.
 
 Pooling males and females, the results indicate that the program is socially efficient: the baseline estimates for the internal rate of return and the benefit-to-cost ratio are \irrp\ and \bcp. The program generates a benefit of \bcp\ for every dollar spent on it. This is of particular importance because ABC and CARE were much more expensive than other early childhood education programs like Perry or Head Start \citep{Elango_Hojman_etal_2016_Early-Edu}---the treatment involved more services over a longer time period.
 
