--- a/abc_comprehensivecba_appendix_AA1_2016-08-19a_jbb.tex
+++ b/abc_comprehensivecba_appendix_AA1_2016-08-19a_jbb.tex
@@ -2,7 +2,7 @@
 \input{preamble}
 \input{output/mainstatistics}
 
-\externaldocument{abc_comprehensivecba_2016-08-19a_jbb}
+\externaldocument{abc_comprehensivecba_2016-08-21b_jlg.tex}
 \pagenumbering{roman}
 
 \begin{document}
