--- a/output/abc_cohorts.tex
+++ b/output/abc_cohorts.tex
@@ -1,21 +1,14 @@
-\documentclass[]{article}
-\setlength{\pdfpagewidth}{8.5in} \setlength{\pdfpageheight}{11in}
-\begin{document}
 \begin{tabular}{lcc} \hline
  & (1) & (2) \\
- & mdi0y6m\_est & mdi1y\_est \\
-VARIABLES & mdi0y6m & mdi1y \\ \hline
- &  &  \\
-treat\_cohort\_1 & 4.841 & -2.901 \\
+Cohort 1 & 4.841 & -2.901 \\
  & (5.840) & (5.838) \\
-treat\_cohort\_2 & 0.071 & 1.882 \\
+Cohort 2 & 0.071 & 1.882 \\
  & (5.840) & (5.744) \\
-treat\_cohort\_3 & 9.143 & 10.038* \\
+Cohort 3 & 9.143 & 10.038* \\
  & (5.635) & (5.838) \\
-treat\_cohort\_4 & 4.586 & 9.333* \\
+Cohort 4 & 4.586 & 9.333* \\
  & (4.741) & (4.887) \\
  &  &  \\
 Observations & 135 & 132 \\
  R-squared & 0.040 & 0.081 \\ \hline
 \end{tabular}
-\end{document}
