anna making changes to the external document reference

--- a/abc_comprehensivecba_2016-08-21b_jlg.tex
+++ b/abc_comprehensivecba_2016-08-21b_jlg.tex
@@ -2,7 +2,7 @@
 \input{preamble}
 \input{output/mainstatistics}
 
-\externaldocument{abc_comprehensivecba_appendix_2016-07-31a_jlg.tex}
+\externaldocument{abc_comprehensivecba_appendix_2016-07-31a_jlg}
 \pagenumbering{roman}
 
 \begin{document}
