anna pushing changes from 8-22 including changes to methodology

--- a/Appendices/Health/results.tex
+++ b/Appendices/Health/results.tex
@@ -2,22 +2,23 @@
 
 \noindent If the treatment affects health outcomes, it does so by impacting the incidence rate of health conditions. For an individual, health conditions in turn impact their medical costs and quality of life. It is worth noting that lifetime medical costs depend on the severity of health events, however, they also depend on length of life in two ways: individuals who live longer accumulate medical costs over more years and medical costs increase with age. Because of this, it is important to quantify the benefits of an extra year of life that is healthy. Therefore, we look at the treatment effects on both medical costs and QALYs. \\
 
-\noindent The projections for health outcomes of treatment and control groups differ in the prevalence of chronic conditions. Table~\ref{table:prevalence65} shows the prevalence of six chronic conditions between ages 40 and 65, when chronic conditions and diseases are majorly developed.\footnote{There are also differences in government transfer program participation rates. For example, 14\% of males in the treatment group are expected to claim disability insurance by age 60, while the males in the control group are expected to have a higher claiming rate of 25\%. The treatment effect for females at age 60 is much lower, showing only a 4\% difference.} \\
+
+%Table~\ref{table:prevalence65} shows the prevalence of six chronic conditions between ages 40 and 65, when chronic conditions and diseases are majorly developed.\footnote{There are also differences in government transfer program participation rates. For example, 14\% of males in the treatment group are expected to claim disability insurance by age 60, while the males in the control group are expected to have a higher claiming rate of 25\%. The treatment effect for females at age 60 is much lower, showing only a 4\% difference.} \\
 %In future work, we will monetize the treatment effect in program participation as well.
 
-\begin{table}[H]
-\begin{threeparttable}
-\footnotesize
-\caption{Prevalence of Disease from Ages 40 to 65} \label{table:prevalence65}
-\input{AppOutput/Health/ABCCARE_health_at_65_table.tex}
-\begin{tablenotes}
-\footnotesize
-\item Note: Prevalence of six chronic conditions in the microsimulation exercise for the treatment and control groups by age 65, and by gender.
-\end{tablenotes}
-\end{threeparttable}
-\end{table}
+%\begin{table}[H]
+%\begin{threeparttable}
+%\footnotesize
+%\caption{Prevalence of Disease from Ages 40 to 65} \label{table:prevalence65}
+%\input{AppOutput/Health/ABCCARE_health_at_65_table.tex}
+%\begin{tablenotes}
+%\footnotesize
+%\item Note: Prevalence of six chronic conditions in the microsimulation exercise for the treatment and control groups by age 65, and by gender.
+%\end{tablenotes}
+%\end{threeparttable}
+%\end{table}
 
-\noindent These differences in prevalence of health conditions impact medical costs and QALYs for these groups. Figures~\ref{figure:qaly} and~\ref{figure:totmd} show the evolution from age 30 of average QALYs and medical costs from all sources over the simulated life-cycle of the treatment and control groups.\footnote{This measure of total costs combines medical spending paid by private health insurance, public insurance, spending paid out-of-pocket, and all other sources.} 
+\noindent The projections for health outcomes of treatment and control groups differ in the prevalence of chronic conditions. These differences in prevalence of health conditions impact medical costs and QALYs for these groups. Figures~\ref{figure:qaly} and~\ref{figure:totmd} show the evolution from age 30 of average QALYs and medical costs from all sources over the simulated life-cycle of the treatment and control groups.\footnote{This measure of total costs combines medical spending paid by private health insurance, public insurance, spending paid out-of-pocket, and all other sources.} 
 %The averages shown are not conditional on survival, hence they drop to zero when everyone in the cohort is projected to have died.
 
 \begin{figure}[H]
